<resources>
    <string name="app_name">Clan Battles</string>
    <string name="title_home">Home</string>
    <string name="title_sources">sources</string>
    <string name="mock_text">MockText</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="rank">Rank</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>


    <string name="title_activity_clan">ClanActivity</string>
    <string name="mapsKey">AIzaSyCw5poDVzlpLmrZYE0-wkc5xqRD7TOCM60</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">492254917917746</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb492254917917746</string>
    <string name="not_log_in">Error when trying to Sign in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="on_boarding_next_button">Continue</string>
    <string name="contentDescriptionUpButton">Up Button</string>
    <string name="userImageView">userImageView</string>
    <string name="account">Account</string>
    <string name="username">mockUsername</string>
    <string name="register_string">Register</string>

</resources>

